# deluge-piece-priority

./: AGENTS.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
deluge_piecepriority/: __init__.py  common.py  core.py  gtkui.py  piece_layout.py  webui.py
deluge_piecepriority/data/: piecepriority.js
docs/spec/: 00-overview.md  01-core-rpc.md  02-libtorrent-semantics.md  03-webui.md  04-gtkui.md  05-packaging-compat.md
tests/: test_core.py  test_piece_layout.py
